Changing styles for different environments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-sm bg-success navbar-dark">
+<nav 
+  [style.backgroundColor]="backgroundColor"
+  class="navbar navbar-expand-sm  navbar-light" >
   <a class="navbar-brand" href="#">
-    Ghassen Khalouaoui Website
+    Ghassen's Resume
   </a>
   <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#mynav">
     <span class="navbar-toggle-icon"></span>
