--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,6 +6,9 @@
 </nav>
 
 <h5>Dashboard</h5>
+
+
+
 <h6>{{ToDay | date : "mediumDate"}}</h6>
 <div class="row">
   <div class="col-lg-3 pb-3" style="background-color: #e9e6e6">
@@ -29,7 +32,7 @@
         {{ Username | uppercase }}
       </div>
       <div class="col-12 text-center pt-2 pb-2" style="font-family: Arial">
-        SUMMARY
+        Contacts
       </div>
       <div class="col-12 mb-3">
         <ul class="list-group">
@@ -101,10 +104,17 @@
       >
         LANGUAGES
       </div>
-      <div class="col-12">
+      <div class="col-12 mb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item" *ngFor="let language of Languages">
-            {{ language  }}
+            {{ language.name  }}
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped bg-info" role="progressbar" 
+              [ngStyle]="{
+                'width': language.experience + '%'
+              }"
+               aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </li>
         </ul>
       </div>
@@ -122,7 +132,7 @@
                 id="dropdownMenuButton"
                 data-toggle="dropdown"
               >
-                Project A
+              End of Study Internship
               </button>
               <div class="dropdown-menu">
                 <a
@@ -143,18 +153,18 @@
                 id="dropdownMenuButton"
                 data-toggle="dropdown"
               >
-                2019
+                2021
               </button>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#" *ngFor="let year of Years">
                   <span [ngSwitch]="year">
-                    <span *ngSwitchCase = "'2019'" style="color: green;">
+                    <span *ngSwitchCase = "'2021'" style="color: green;">
                       {{year}}
                     </span>
-                    <span *ngSwitchCase = "'2018'" style="color: blue;">
+                    <span *ngSwitchCase = "'2020'" style="color: blue;">
                       {{year}}
                     </span>
-                    <span *ngSwitchCase = "'2017'" style="color: red;">
+                    <span *ngSwitchCase = "'2019'" style="color: red;">
                       {{year}}
                     </span>
                     <span *ngSwitchDefault style="color: black;">
@@ -197,19 +207,25 @@
       </div>
       <div class="col-12">
         <table class="table">
-          <tr>
+          <tr style="color: purple;">
             <th>Skill</th>
-            <th>Experience</th>
+            <th>Progress</th>
             <th>Level</th>
           </tr>
           <tr *ngFor="let skill of Skills">
-            <td>
+            <td style="width: 120px;">
               <b>{{ skill.Name }}</b>
             </td>
-            <td>
-              {{ skill.Experience }}
+            <td style="width: 350px;">
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" 
+                [ngStyle]="{
+                  'width': skill.Level 
+                }"
+                 aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">{{skill.Level}}</div>
+              </div>
             </td>
-            <td>
+            <td style="width: 50px;">
               {{ skill.Level }}
             </td>
           </tr>
@@ -239,7 +255,7 @@
                   data-toggle="collapse"
                   [attr.data-target]="'#cardbody' + i"
                 >
-                  {{ teamMembersGroup.Region }}
+                  {{ teamMembersGroup.Name }}
                 </button>
               </h2>
             </div>
@@ -250,37 +266,42 @@
               [ngClass]="(i==0)?'show':''"  
             >
               <div class="card-body">
-                <div *ngIf="i==0;then firstTemplate; else secondTemplate">
-                </div>
-                <ng-template #firstTemplate>
-                  <div class="card" *ngFor="let teamMember of teamMembersGroup.Members">
-                    <div class="card-header bg-primary text-white">
-                      #{{teamMember.ID}}{{teamMember.Skill}}
-                    </div>
-                    <div class="card-body">{{teamMember.Level1}}
-                    </div>
-                  </div>
-                </ng-template>
-                <ng-template #secondTemplate>
                   <table class="table">
                     <thead>
                       <tr>
-                        <th>ID</th>
                         <th>Skill</th>
                         <th>Level</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr *ngFor="let member of teamMembersGroup.Members">
-                        <td>{{ member.ID }}</td>
                         <td [style.color]="(member.Level1=='Average')? 'red': 'black'">{{ member.Skill }}</td>
                         <td>{{ member.Level1 }}</td>
                       </tr>
                     </tbody>
                   </table>
-                </ng-template>
-
-              </div>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" [attr.data-target]="'#'+ teamMembersGroup.id">
+                    Certificate
+                  </button>
+                  <div class="modal fade" [id]="teamMembersGroup.id" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" [id]="teamMembersGroup.id"> {{ teamMembersGroup.Name }} Certificate</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          <img [src]="teamMembersGroup.Url" style="width: 30rem;">
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
           </div>
         </div>
